--- a/hello-spring/src/main/resources/templates/members/memberList.html
+++ b/hello-spring/src/main/resources/templates/members/memberList.html
@@ -11,14 +11,15 @@
     <table>
       <thead>
       <tr>
-        <tr>#</tr>
-        <tr>이름</tr>
+        <th>#</th>
+        <th>이름</th>
       </tr>
       </thead>
       <tbody>
-      <tr th:each="member : ${members}">
-        <td th:text="${member.id}"></td>
-        <td th:text="${member.name}"></td>
+      <tr th:each="member : ${members}"> <!--th:each - 타임리프 문법임. 루프를 돌면서 아래 로직 실현. members에서 꺼낸 객체?를 member에 담음-->
+        <td th:text="${member.id}"></td> <!--member.java의 getid에 접근해서 private field인 id를 꺼냄-->
+        <td th:text="${member.name}"></td> <!--Member.java의 getname에 접근해서 private field인 name을 꺼냄-->
+        <!--주의: 위의 데이터는 메모리 안(자바 안)에 있기 때문에 서버를 한번 껐다 키면 데이터가 싹 사라진다ㅜ-->
       </tr>
       </tbody>
     </table>
